apps/arr-stack/bazarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      containers:
        - name: bazarr
          image: linuxserver/bazarr:latest
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: bazarr
            - name: nas
              mountPath: /movies
              subPath: arr/Plex/film
            - name: nas
              mountPath: /tv
              subPath: arr/Plex/TV
            - name: nas
              mountPath: /anime
              subPath: arr/Plex/Anime/Series
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: "2"
              memory: 512Mi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: arr-config-pvc
        - name: nas
          persistentVolumeClaim:
            claimName: arr-nas-pvc
