apps/arr-stack/readarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: readarr
  labels:
    app: readarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: readarr
  template:
    metadata:
      labels:
        app: readarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: pj
      containers:
        - name: readarr
          image: linuxserver/readarr:0.4.19-nightly
          ports:
            - containerPort: 8787
          volumeMounts:
            - name: config
              mountPath: /config
              subPath: readarr
            - name: nas
              mountPath: /audiobooks
              subPath: audiobookshelf/audiobooks
            - name: nas
              mountPath: /downloads
              subPath: arr-stack/downloads/torrents
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: arr-config-pvc
        - name: nas
          persistentVolumeClaim:
            claimName: arr-nas-pvc
